--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -8,7 +8,10 @@ ENV TZ=America/New_York
 RUN apt-get update && apt-get install -y locales tzdata python3.9 python3-pip && rm -rf /var/lib/apt/lists/* && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
 ENV LANG en_US.utf8
 
+RUN mkdir logs
 COPY main.py /usr/src/app/
+COPY config.py /usr/src/app/
+COPY logging_config.json /usr/src/app/
 COPY requirements.txt /usr/src/app/
 
 RUN pip install -U --no-cache-dir pip
