Agrego un requerimiento faltante

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -23,6 +23,7 @@ pydantic==1.8.2
 pymongo==3.12.0
 PyNaCl==1.4.0
 pyrsistent==0.18.0
+pyTelegramBotAPI==4.1.0
 python-dotenv==0.19.0
 PyYAML==5.4.1
 requests==2.26.0
